Committing Parallel STL 20180322 open source release

--- a/examples/convex_hull/readme.html
+++ b/examples/convex_hull/readme.html
@@ -313,7 +313,7 @@
 
 	<p>
 		This example demonstrates computing the convex_hull of a set of points on the plane based on the quickhull algorithm.
-		See https://en.wikipedia.org/wiki/Quickhull for more information.
+		See <a href="https://en.wikipedia.org/wiki/Quickhull">https://en.wikipedia.org/wiki/Quickhull</a> for more information.
 	<br><br>
 		The example generates a set of random 2D points by <code>std::generate</code>. Then performs the quickhull algorithm on it.
 		Left and right most points are found by <code>std::minmax_element</code>.
