--- a/examples/gamma_correction/readme.html
+++ b/examples/gamma_correction/readme.html
@@ -313,7 +313,7 @@
 	
 	<p>
 		This example demonstrates <i>gamma correction</i> &mdash; a nonlinear operation used to encode and decode the luminance of each image pixel.
-		See https://en.wikipedia.org/wiki/Gamma_correction for more information.
+		See <a href="https://en.wikipedia.org/wiki/Gamma_correction">https://en.wikipedia.org/wiki/Gamma_correction</a> for more information.
 	<br><br>
 		The example creates a fractal image in memory and performs gamma correction on it.
 		The output of the example application is a BMP image with corrected luminance.
