--- a/examples/gamma_correction/readme.html
+++ b/examples/gamma_correction/readme.html
@@ -366,7 +366,10 @@
 		<div class="h3-alike">Build instructions</div>
 		<input type="checkbox" checked="checked">
 		<div class="show-hide">
-			<p>To use Parallel STL, set up the environment by calling the <i><code>pstlvars</code></i> script (if you use a command line) or set the <code>%PSTLROOT%</code> environment variable pointing to the <code>&lt;pstl_installdir&gt;</code> folder (in Microsoft* Visual Studio* IDE on Windows* OS).</p>
+			<p>To use Parallel STL, set up the environment by calling the <i><code>pstlvars</code></i> script (if you use a command line) or set the <code>%PSTLROOT%</code> 
+				environment variable pointing to the <code>&lt;pstl_installdir&gt;</code> folder (in Microsoft* Visual Studio* IDE on Windows* OS)
+				and add the <code>&lt;pstl_installdir&gt;/pstl/include</code> folder to the compiler include paths.
+			</p>
 			<p>Use the <a href="Makefile">Makefile</a> to build the example on the command line.</p>
 			<p>Use the <a href="msvs/gamma_correction.sln">msvs/gamma_correction.sln</a> project file to build the example in the Microsoft* Visual Studio* IDE (Windows* systems only).</p>
 		</div>
