--- a/examples/dot_product/readme.html
+++ b/examples/dot_product/readme.html
@@ -357,10 +357,7 @@
 		<div class="h3-alike">Build instructions</div>
 		<input type="checkbox" checked="checked">
 		<div class="show-hide">
-			<p>To use Parallel STL, set up the environment by calling the <i><code>pstlvars</code></i> script (if you use a command line) or set the <code>%PSTLROOT%</code> 
-                        	environment variable pointing to the <code>&lt;pstl_installdir&gt;</code> folder (in Microsoft* Visual Studio* IDE on Windows* OS)
-				and add the <code>&lt;pstl_installdir&gt;/pstl/include</code> folder to the compiler include paths.
-			</p>
+			<p>Read <a href="https://software.intel.com/en-us/get-started-with-pstl">Getting Started with Parallel STL</a> for general instructions on setting up and using Parallel STL.</p>
 			<p>Use the <a href="Makefile">Makefile</a> to build the example on the command line.</p>
 			<p>Use the <a href="msvs/dot_product.sln">msvs/dot_product.sln</a> project file to build the example in the Microsoft* Visual Studio* IDE (Windows* systems only).</p>
 		</div>
