Committing Parallel STL 20190321 open source release

--- a/examples/convex_hull/readme.html
+++ b/examples/convex_hull/readme.html
@@ -242,7 +242,7 @@
 			padding: 0 0.2em 0.2em;
 			text-align: center;
 		}
-		.specs td tr:last-child td, 
+		.specs td tr:last-child td,
 		.specs td tr:last-child th {
 			padding: 0 0.2em;
 		}
@@ -378,7 +378,7 @@
                 <dd>Outputs the result convex hull <tt>ConvexHull.csv</tt>
 			</dl>
 		</div>
-        <p><sup>(1)</sup> The delivered <a href="Makefile">Makefile</a> is provided for Intel&reg; C++ Compiler for illustration purpose only.</p>
+                <p><sup>(1)</sup> The delivered <a href="Makefile">Makefile</a> is provided for illustration purpose and supports Intel&reg; C++ Compiler only.</p>
 	</div>
 
 	<br>
@@ -390,7 +390,7 @@
 		<div class="show-hide">
 			<p>
 				Intel and the Intel logo are trademarks of Intel Corporation in the U.S. and/or other countries.
-				<br>* Other names and brands may be claimed as the property of others. 
+				<br>* Other names and brands may be claimed as the property of others.
 				<br>&copy; 2017-2019, Intel Corporation
 			</p>
 		</div>
