Add a link to Intel cookies

--- a/before_you_begin.html
+++ b/before_you_begin.html
@@ -228,6 +228,9 @@ and use the <code class="docutils literal notranslate"><span class="pre">std</sp
           By Intel<br/>
         
             &copy; Copyright Intel Corporation.<br/>
+          <div class="extra_footer">
+            <p align="right"><a href="https://www.intel.com/content/www/us/en/privacy/intel-cookie-notice.html">Cookies</a></p>
+          </div>
       </p>
     </div>
   </footer>
