--- a/extension_api.html
+++ b/extension_api.html
@@ -645,6 +645,9 @@ Lifetime of any resources the algorithm allocates (for example: temporary storag
           By Intel<br/>
         
             &copy; Copyright Intel Corporation.<br/>
+          <div class="extra_footer">
+            <p align="right"><a href="https://www.intel.com/content/www/us/en/privacy/intel-cookie-notice.html">Cookies</a></p>
+          </div>
       </p>
     </div>
   </footer>
