--- a/pstl/dpcpp_policies_usage.html
+++ b/pstl/dpcpp_policies_usage.html
@@ -587,6 +587,9 @@ oneDPL parallel algorithms on Linux* (depending on the code, parameters within [
           By Intel<br/>
         
             &copy; Copyright Intel Corporation.<br/>
+          <div class="extra_footer">
+            <p align="right"><a href="https://www.intel.com/content/www/us/en/privacy/intel-cookie-notice.html">Cookies</a></p>
+          </div>
       </p>
     </div>
   </footer>
