--- a/pstl/macros.html
+++ b/pstl/macros.html
@@ -359,6 +359,9 @@ Define only the <code class="docutils literal notranslate"><span class="pre">ONE
           By Intel<br/>
         
             &copy; Copyright Intel Corporation.<br/>
+          <div class="extra_footer">
+            <p align="right"><a href="https://www.intel.com/content/www/us/en/privacy/intel-cookie-notice.html">Cookies</a></p>
+          </div>
       </p>
     </div>
   </footer>
