--- a/pstl_main.html
+++ b/pstl_main.html
@@ -298,6 +298,9 @@ To use Parallel STL with the C++ standard policies, you must have the following 
           By Intel<br/>
         
             &copy; Copyright Intel Corporation.<br/>
+          <div class="extra_footer">
+            <p align="right"><a href="https://www.intel.com/content/www/us/en/privacy/intel-cookie-notice.html">Cookies</a></p>
+          </div>
       </p>
     </div>
   </footer>
