--- a/random.html
+++ b/random.html
@@ -433,6 +433,9 @@ are defined in the header <code class="docutils literal notranslate"><span class
           By Intel<br/>
         
             &copy; Copyright Intel Corporation.<br/>
+          <div class="extra_footer">
+            <p align="right"><a href="https://www.intel.com/content/www/us/en/privacy/intel-cookie-notice.html">Cookies</a></p>
+          </div>
       </p>
     </div>
   </footer>
