--- a/tested_standard_cpp_api.html
+++ b/tested_standard_cpp_api.html
@@ -952,6 +952,9 @@ Visual Studio* 2019</p></td>
           By Intel<br/>
         
             &copy; Copyright Intel Corporation.<br/>
+          <div class="extra_footer">
+            <p align="right"><a href="https://www.intel.com/content/www/us/en/privacy/intel-cookie-notice.html">Cookies</a></p>
+          </div>
       </p>
     </div>
   </footer>
