--- a/genindex.html
+++ b/genindex.html
@@ -195,6 +195,9 @@
           By Intel<br/>
         
             &copy; Copyright Intel Corporation.<br/>
+          <div class="extra_footer">
+            <p align="right"><a href="https://www.intel.com/content/www/us/en/privacy/intel-cookie-notice.html">Cookies</a></p>
+          </div>
       </p>
     </div>
   </footer>
