--- a/documentation/library_guide/_templates/layout.html
+++ b/documentation/library_guide/_templates/layout.html
@@ -1,5 +1,23 @@
 {% extends "!layout.html" %}
 {% block extrahead %}
+
+    <script defer type="text/javascript" src="https://www.intel.com/content/dam/www/global/wap/performance-config.js" ></script>
+    <script type="text/javascript">
+        // Configure TMS settings
+        var wapLocalCode = 'us-en'; // Dynamically set per localized site, see mapping table for values
+        var wapSection = "oneapi-dpl"; // WAP team will give you a unique section for your site
+        // Load TMS
+        if(document.location.href.contains("oneapi-src.github.io")){
+        (function () {
+        var url = 'https://www.intel.com/content/dam/www/global/wap/tms-loader.js'; // WAP file URL
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = url;
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+        })();
+        }
+    </script>
+    <link href="{{ pathto("_static/style.css", True) }}" rel="stylesheet" type="text/css">
+
+
 {% endblock %}
 
           {% block sidebartitle %}
