Updated layout.html per WAP team
Signed-off-by: Dylan Benito <dylan.benito@intel.com>

--- a/documentation/library_guide/_templates/layout.html
+++ b/documentation/library_guide/_templates/layout.html
@@ -7,7 +7,7 @@
         var wapLocalCode = 'us-en'; // Dynamically set per localized site, see mapping table for values
         var wapSection = "oneapi-dpl"; // WAP team will give you a unique section for your site
         // Load TMS
-        if(document.location.href.contains("oneapi-src.github.io")){
+        if(document.location.href.includes("oneapi-src.github.io")){
         (function () {
         var url = 'https://www.intel.com/content/dam/www/global/wap/tms-loader.js'; // WAP file URL
         var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = url;
